# cookiecutter-gatpack

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  cookiecutter.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
cookiecutter_gatpack/: __init__.py
cookiecutter_gatpack/_ai/: dataset.py  features.py  plots.py
cookiecutter_gatpack/_course/: CITATION.cff  Syllabus.md
docker/: cookiecutter-gatpack.Dockerfile
docs/: CONTRIBUTING.md  SECURITY.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: README.md
{{ cookiecutter.repo_name }}/: .cursorrules  README.md  build.sh  compose.gatpack.json
{{ cookiecutter.repo_name }}/02_device-readings/: device_readings.tex
{{ cookiecutter.repo_name }}/assets/: jinja_placeholders.tex
{{ cookiecutter.repo_name }}/cover/: cover.fdb_latexmk  cover.fls  cover.jinja.fdb_latexmk  cover.jinja.fls  cover.jinja.tex  cover.tex
{{ cookiecutter.repo_name }}/device_readings/: device_readings.jinja.fdb_latexmk  device_readings.jinja.fls  device_readings.jinja.tex  device_readings.tex  further_readings.fdb_latexmk  further_readings.fls  futher_readings.fls  futher_readings.jinja.fdb_latexmk  futher_readings.jinja.fls
{{ cookiecutter.repo_name }}/further_readings/: further_readings.fdb_latexmk  further_readings.fls  further_readings.jinja.fdb_latexmk  further_readings.jinja.fls  further_readings.jinja.tex  further_readings.tex  futher_readings copy.fdb_latexmk  futher_readings copy.fls  futher_readings.fdb_latexmk
{{ cookiecutter.repo_name }}/reading-packet-example/: build.sh  compose.gatpack.json
(+6 files in other folders)
